<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/latitude_p1"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_above="@+id/latitude_p2"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/latitude_p1"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/latitude_p2"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/latitude_p2"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/latitude_p2"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="@+id/latitude_p1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/latitude_p1"
        app:layout_constraintTop_toBottomOf="@+id/latitude_p1" />

    <EditText
        android:id="@+id/longitude_p1"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/latitude_p1"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/longitude_p1"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/longitude_p2"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/latitude_p2"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/longitude_p2"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        app:layout_constraintEnd_toEndOf="@+id/longitude_p1"
        app:layout_constraintStart_toStartOf="@+id/longitude_p1"
        app:layout_constraintTop_toBottomOf="@+id/longitude_p1" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="@+id/latitude_p1"
        app:layout_constraintTop_toBottomOf="@+id/latitude_p2" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/calculate"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="@+id/longitude_p1"
        app:layout_constraintTop_toBottomOf="@+id/longitude_p2" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="70dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/calculate"
        android:layout_marginTop="8dp"
        android:text="@string/distance"
        app:layout_constraintStart_toStartOf="@+id/latitude_p1"
        app:layout_constraintTop_toBottomOf="@+id/calculate" />

    <TextView
        android:id="@+id/bearing"
        android:layout_width="70dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/calculate"
        android:layout_marginTop="8dp"
        android:text="@string/bearing"
        app:layout_constraintStart_toStartOf="@+id/latitude_p1"
        app:layout_constraintTop_toBottomOf="@+id/distance" />

    <TextView
        android:id="@+id/distanceAnswer"
        android:layout_width="90dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/distance"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/distanceUnits"
        app:layout_constraintStart_toEndOf="@+id/distance"
        app:layout_constraintTop_toBottomOf="@+id/calculate" />

    <TextView
        android:id="@+id/bearingAnswer"
        android:layout_width="90dp"
        android:layout_height="24dp"
        android:layout_alignStart="@+id/distanceAnswer"
        android:layout_alignTop="@+id/bearing"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/bearingUnit"
        app:layout_constraintStart_toEndOf="@+id/bearing"
        app:layout_constraintTop_toBottomOf="@+id/distanceAnswer" />

    <TextView
        android:id="@+id/distanceUnits"
        android:layout_width="90dp"
        android:layout_height="24dp"
        android:layout_alignStart="@+id/longitude_p1"
        android:layout_alignTop="@+id/distance"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/longitude_p1"
        app:layout_constraintStart_toEndOf="@+id/distanceAnswer"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

    <TextView
        android:id="@+id/bearingUnit"
        android:layout_width="90dp"
        android:layout_height="24dp"
        android:layout_alignStart="@+id/distanceUnits"
        android:layout_alignTop="@+id/bearing"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/longitude_p1"
        app:layout_constraintStart_toEndOf="@+id/bearingAnswer"
        app:layout_constraintTop_toBottomOf="@+id/distanceUnits" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <TextView
        android:id="@+id/tired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/tired"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/search"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/search"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tired"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tired" />

    <ImageView
        android:id="@+id/sourceImage"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="@+id/latitude_p1"
        app:layout_constraintTop_toBottomOf="@+id/bearing"
        app:srcCompat="@drawable/clear_day" />

    <ImageView
        android:id="@+id/destinationImage"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="@+id/latitude_p1"
        app:layout_constraintTop_toBottomOf="@+id/sourceImage"
        app:srcCompat="@drawable/clear_day" />

    <TextView
        android:id="@+id/sourceTemp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/temperature"
        app:layout_constraintEnd_toEndOf="@+id/clear"
        app:layout_constraintStart_toEndOf="@+id/sourceImage"
        app:layout_constraintTop_toBottomOf="@+id/bearingAnswer" />

    <TextView
        android:id="@+id/sourceForecast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/forecast"
        app:layout_constraintEnd_toEndOf="@+id/clear"
        app:layout_constraintStart_toEndOf="@+id/sourceImage"
        app:layout_constraintTop_toBottomOf="@+id/sourceTemp" />

    <TextView
        android:id="@+id/destTemp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/temperature"
        app:layout_constraintEnd_toEndOf="@+id/clear"
        app:layout_constraintStart_toEndOf="@+id/destinationImage"
        app:layout_constraintTop_toBottomOf="@+id/sourceForecast" />

    <TextView
        android:id="@+id/destForecast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/forecast"
        app:layout_constraintEnd_toEndOf="@+id/clear"
        app:layout_constraintStart_toEndOf="@+id/destinationImage"
        app:layout_constraintTop_toBottomOf="@+id/destTemp" />

</android.support.constraint.ConstraintLayout>